--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bare - Start Bootstrap Template</title>
+    <title>Mapping the 4th Static Page</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <style>
@@ -44,20 +45,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">Browse Collections</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="transcribe.html">Transcribe</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="tag.html">Tag</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="discuss.html">Discuss</a>
                     </li>
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -68,17 +70,262 @@
     <!-- Page Content -->
     <div class="container">
 
+        <!-- /.row -->
+
+        <div class="row"> 
+            <div class="col-lg-12 text-center" style="margin-bottom: 30px;">
+                <h1>Welcome to Mapping The Fourth!</h1>
+                <p class="lead"> Help us better understand the history of our country.</p>
+
+                <p style="margin-bottom: 20px;"> The long crisis of the Civil War, stretching from the 1840s to the 1870s, forced Americans to confront difficult questions about the meaning and the boundaries of their nation. What did it mean to be an American? Who was included and excluded? Where did the nation’s borders lie? But it was on one particular day each year—July 4—that they left the most explicit evidence of their views. In newspapers and speeches, in personal diaries and letters to their friends and family, Americans gave voice to typically unspoken beliefs about national identity.</p>
+                <!-- <a class="btn" href="" style="" id="large-btn">Get Started</a> -->
+            </div> 
+        </div>
+
         <div class="row">
-            <div class="col-lg-12 text-center">
-                <h1>A Bootstrap Starter Template</h1>
-                <p class="lead">Complete with pre-defined file paths that you won't have to change!</p>
-                <ul class="list-unstyled">
-                    <li>Bootstrap v3.3.1</li>
-                    <li>jQuery v1.11.1</li>
-                </ul>
+            <div class="col-lg-12 text-center" style="margin-bottom: 30px;">
+                <p>
+                    We found a few documents close to <a> Blacksburg</a>. Or You can tell us anything you have in mind about civil war below and see what we can find for you! 
+                </p>
+                <form class="form-wrapper" >
+                    <input type="text" id="search" placeholder="Search for Interesting Places!" required>
+                    <input type="submit" value="Search" id="submit">
+                </form>  
             </div>
         </div>
-        <!-- /.row -->
+
+        <div class="row">
+            <div>
+                <div class="col-lg-12 text-center" style="margin-bottom: 30px;">
+                    <h2> Here are a list of projects that others are working on!</h2>
+                </div>
+                <p style="margin-left:1em">Sort by: <a href="">completion</a>-<a href="">types</a>-<a href="">time</a>-<a href="">last updated</a> </p>
+            </div>
+        </div>
+
+<div class="row">
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-2 col-sm-3 col-xs-4">
+        <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">
+             <img src="http://www.placecage.com/200/200" class="thumbnail img-responsive">
+        </a>
+        <h4 style="text-align: center;">Hello World</h4>
+        <p style="text-align: center;"> this is placeholder text for a description </p>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                <span class="sr-only">45% Complete</span>
+            </div>
+        </div>
+    </div>
+
+
+
+
+  
+</div>
 
     </div>
     <!-- /.container -->
@@ -88,6 +335,11 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+    <script>
+$(document).ready(function(){
+    $('[data-toggle="popover"]').popover({ trigger: "hover" });
+});
+</script>
 
 </body>
 
